# realmate-test

./: .dockerignore  .gitignore  Dockerfile  INSTRUCTIONS.md  README.md  docker-compose.yaml  pyproject.toml
frontend/: Dockerfile  entrypoint.sh  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: ConversationDetail.css  ConversationDetail.js  ConversationList.css  ConversationList.js  CreateConversation.css  CreateConversation.js  CreateMessage.css  CreateMessage.js
realmate_challenge/: settings.py  urls.py
realmate_challenge/conversations/: admin.py  models.py  serializers.py  urls.py  views.py
realmate_challenge/conversations/migrations/: 0001_initial.py  0002_webhooklog.py  0003_alter_conversation_status_alter_message_direction.py
realmate_challenge/conversations/services/: webhook_service.py
realmate_challenge/management/commands/: wait_for_db.py
